--- a/JavaSMP/index.html
+++ b/JavaSMP/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
 <html>
+    <iframe src="https://discord.com/widget?id=1028381617846235166&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
     <h1>Welcome onto the Java SMP Website!</h1>
 </html>
