--- a/JavaSMP/index.html
+++ b/JavaSMP/index.html
@@ -1,5 +1,26 @@
 <!DOCTYPE html>
 <html>
-    <iframe src="https://discord.com/widget?id=1028381617846235166&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
-    <h1>Welcome onto the Java SMP Website!</h1>
+    <head>
+        <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Unbounded:wght@500;400&display=swap" rel="stylesheet">
+        <style> @import url('https://fonts.googleapis.com/css2?family=Unbounded:wght@400;900&display=swap'); </style>
+        <style>
+            h1 {
+                font-family: 'Unbounded', cursive;
+                font-weight: 900;
+            }
+            
+            p {
+                font-family: 'Unbounded', cursive;
+                font-weight: 400;
+            }
+
+            .right {
+                float: right;
+            }
+        </style>
+    </head>
+    <body>
+    <h1><strong>Welcome to the Java SMP Website</strong></h1><span class="right"><iframe src="https://discord.com/widget?id=1028381617846235166&theme=auto" width="550" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe></span>
+    <p>More information soon!</p>
+    </body>
 </html>
