--- a/JavaSMP/index.html
+++ b/JavaSMP/index.html
@@ -8,19 +8,17 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Unbounded:wght@400;900&display=swap');
     </style>
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XBLTC6KSQK"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
-
-        gtag('config', 'G-XBLTC6KSQK');
-    </script>
     <style>
         h1 {
             font-family: 'Unbounded', cursive;
             font-weight: 900;
+        }
+
+        .bold {
+            font-family: 'Unbounded', cursive;
+            font-weight: 900;
+            color: #333;
+            font-size: 100px;
         }
 
         p {
@@ -35,11 +33,15 @@
 </head>
 
 <body>
+    <span class="rightbkg"></span>
     <h1><strong>Welcome to the Java SMP Website</strong></h1><span class="right"><iframe
             src="https://discord.com/widget?id=1028381617846235166&theme=auto" width="550" height="500"
             allowtransparency="true" frameborder="0"
             sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe></span>
-    <p>More information soon!</p>
+            <iframe width="1300" height="615"
+            src="http://15.235.82.134:7569">
+            </iframe>
+    <marquee class="bold" scrollamount="50" bgcolor="yellow">BREAKING NEWS: CBOT IS COOL!</marquee>
 </body>
 
 </html>
