fixed links not working

--- a/JavaSMP/index.html
+++ b/JavaSMP/index.html
@@ -79,7 +79,7 @@
           </button>
         </div>
         <div class="hidden lg:flex lg:min-w-0 lg:flex-1 lg:justify-center lg:gap-x-12">
-          <a href="form.html" class="font-semibold text-gray-900 hover:text-gray-900">Join</a>
+          <a href="/form.html" class="font-semibold text-gray-900 hover:text-gray-900">Join</a>
 
           <a href="servermap.html" class="font-semibold text-gray-900 hover:text-gray-900">Map</a>
 
@@ -111,7 +111,7 @@
               <div class="space-y-2 py-6">
                 <a href="servermap.html" class="-mx-3 block rounded-lg py-2 px-3 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-400/10">Map</a>
 
-                <a href="form.html" class="-mx-3 block rounded-lg py-2 px-3 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-400/10">Join</a>
+                <a href="/form.html" class="-mx-3 block rounded-lg py-2 px-3 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-400/10">Join</a>
               </div>
               <div class="py-6">
                 <a href="https://discord.gg/sbz27nzMkp" class="-mx-3 block rounded-lg py-2.5 px-3 text-base font-semibold leading-6 text-gray-900 hover:bg-gray-400/10">Join our discord</a>
@@ -129,7 +129,7 @@
           <div class="hidden sm:mb-8 sm:flex sm:justify-center">
             <div class="relative overflow-hidden rounded-full py-1.5 px-4 text-sm leading-6 ring-1 ring-gray-900/10 hover:ring-gray-900/20">
               <span class="text-gray-600">
-                Join Season 5 <a href="form.html" class="font-semibold text-indigo-600"><span class="absolute inset-0" aria-hidden="true"></span>Check it out! <span aria-hidden="true">&rarr;</span></a>
+                Join Season 5 <a href="/form.html" class="font-semibold text-indigo-600"><span class="absolute inset-0" aria-hidden="true"></span>Check it out! <span aria-hidden="true">&rarr;</span></a>
               </span>
             </div>
           </div>
