--- a/purple/index.html
+++ b/purple/index.html
@@ -49,7 +49,7 @@
           <div class="flex flex-1 items-center">
             <div class="flex w-full items-center justify-between md:w-auto">
               <a href="#">
-                <span class="sr-only">Your Company</span>
+                <span class="sr-only">Purple Water Company</span>
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 512"><!--! Font Awesome Pro 6.2.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. --><path d="M88 0h80c13.3 0 24 10.7 24 24V64H64V24C64 10.7 74.7 0 88 0zM0 151.7c0-15.6 9-29.8 23.2-36.5l24.4-11.4c11-5.1 23-7.8 35.1-7.8h90.6c12.1 0 24.1 2.7 35.1 7.8l24.4 11.4c14.2 6.6 23.2 20.8 23.2 36.5c0 14.4-7.5 27-18.9 34.1c11.5 8.8 18.9 22.6 18.9 38.2c0 16.7-8.5 31.4-21.5 40c12.9 8.6 21.5 23.3 21.5 40s-8.5 31.4-21.5 40c12.9 8.6 21.5 23.3 21.5 40s-8.5 31.4-21.5 40c12.9 8.6 21.5 23.3 21.5 40c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48c0-16.7 8.5-31.4 21.5-40C8.5 415.4 0 400.7 0 384s8.5-31.4 21.5-40C8.5 335.4 0 320.7 0 304s8.5-31.4 21.5-40C8.5 255.4 0 240.7 0 224c0-15.6 7.4-29.4 18.9-38.2C7.5 178.7 0 166.1 0 151.7zM64 240c0 8.8 7.2 16 16 16h96c8.8 0 16-7.2 16-16s-7.2-16-16-16H80c-8.8 0-16 7.2-16 16zM80 352c-8.8 0-16 7.2-16 16s7.2 16 16 16h96c8.8 0 16-7.2 16-16s-7.2-16-16-16H80z"/></svg>
               </a>
               <div class="-mr-2 flex items-center md:hidden">
@@ -63,18 +63,14 @@
               </div>
             </div>
             <div class="hidden md:ml-10 md:block md:space-x-10">
-              <a href="#" class="font-medium text-gray-500 hover:text-gray-900">Product</a>
+              <a href="https://www.aramshiva.com" class="font-medium text-gray-500 hover:text-gray-900">Founder</a>
   
-              <a href="#" class="font-medium text-gray-500 hover:text-gray-900">Features</a>
-  
-              <a href="#" class="font-medium text-gray-500 hover:text-gray-900">Marketplace</a>
-  
-              <a href="#" class="font-medium text-gray-500 hover:text-gray-900">Company</a>
+              <a href="https://yay.aramshiva.com" class="font-medium text-gray-500 hover:text-gray-900">Rickroll</a>
             </div>
           </div>
           <div class="hidden text-right md:block">
             <span class="inline-flex rounded-md shadow-md ring-1 ring-black ring-opacity-5">
-              <a href="#" class="inline-flex items-center rounded-md border border-transparent bg-white px-4 py-2 text-base font-medium text-indigo-600 hover:bg-gray-50">Log in</a>
+              <a href="https://yay.aramshiva.com" class="inline-flex items-center rounded-md border border-transparent bg-white px-4 py-2 text-base font-medium text-indigo-600 hover:bg-gray-50">Join the waitlist</a>
             </span>
           </div>
         </nav>
@@ -106,15 +102,12 @@
               </div>
             </div>
             <div class="space-y-1 px-2 pt-2 pb-3">
-              <a href="#" class="block rounded-md px-3 py-2 text-base font-medium text-gray-700 hover:bg-gray-50 hover:text-gray-900">Product</a>
+              <a href="https://www.aramshiva.com" class="block rounded-md px-3 py-2 text-base font-medium text-gray-700 hover:bg-gray-50 hover:text-gray-900">Founder</a>
   
-              <a href="#" class="block rounded-md px-3 py-2 text-base font-medium text-gray-700 hover:bg-gray-50 hover:text-gray-900">Features</a>
+              <a href="https://yay.aramshiva.com" class="block rounded-md px-3 py-2 text-base font-medium text-gray-700 hover:bg-gray-50 hover:text-gray-900">Rickroll</a>
   
-              <a href="#" class="block rounded-md px-3 py-2 text-base font-medium text-gray-700 hover:bg-gray-50 hover:text-gray-900">Marketplace</a>
-  
-              <a href="#" class="block rounded-md px-3 py-2 text-base font-medium text-gray-700 hover:bg-gray-50 hover:text-gray-900">Company</a>
             </div>
-            <a href="#" class="block w-full bg-gray-50 px-5 py-3 text-center font-medium text-indigo-600 hover:bg-gray-100">Log in</a>
+            <a href="https://yay.aramshiva.com" class="block w-full bg-gray-50 px-5 py-3 text-center font-medium text-indigo-600 hover:bg-gray-100">Get one today</a>
           </div>
         </div>
       </div>
@@ -125,21 +118,21 @@
             <h1>
               <span class="block text-base font-semibold text-gray-500 sm:text-lg lg:text-base xl:text-lg">Coming soon</span>
               <span class="mt-1 block text-4xl font-bold tracking-tight sm:text-5xl xl:text-6xl">
-                <span class="block text-gray-900">Data to enrich your</span>
-                <span class="block text-indigo-600">online business</span>
+                <span class="block text-gray-900">The best colored water</span>
+                <span class="block text-indigo-600">ANYWHERE.</span>
               </span>
             </h1>
-            <p class="mt-3 text-base text-gray-500 sm:mt-5 sm:text-xl lg:text-lg xl:text-xl">Anim aute id magna aliqua ad ad non deserunt sunt. Qui irure qui lorem cupidatat commodo. Elit sunt amet fugiat veniam occaecat fugiat aliqua ad ad non deserunt sunt.</p>
+            <p class="mt-3 text-base text-gray-500 sm:mt-5 sm:text-xl lg:text-lg xl:text-xl">Join the waitlist to join millons waiting for the new water revolution.</p>
             <div class="mt-8 sm:mx-auto sm:max-w-lg sm:text-center lg:mx-0 lg:text-left">
               <p class="text-base font-medium text-gray-900">Sign up to get notified when it’s ready.</p>
               <form action="#" method="POST" class="mt-3 sm:flex">
                 <label for="email" class="sr-only">Email</label>
                 <input type="email" name="email" id="email" class="block w-full rounded-md border-gray-300 py-3 text-base placeholder-gray-500 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:flex-1" placeholder="Enter your email">
-                <button type="submit" class="mt-3 w-full rounded-md border border-transparent bg-gray-800 px-6 py-3 text-base font-medium text-white shadow-sm hover:bg-gray-900 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 sm:mt-0 sm:ml-3 sm:inline-flex sm:w-auto sm:flex-shrink-0 sm:items-center">Notify me</button>
+                <button type="submit" class="mt-3 w-full rounded-md border border-transparent bg-gray-800 px-6 py-3 text-base font-medium text-white shadow-sm hover:bg-gray-900 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 sm:mt-0 sm:ml-3 sm:inline-flex sm:w-auto sm:flex-shrink-0 sm:items-center">Join today</button>
               </form>
               <p class="mt-3 text-sm text-gray-500">
                 We care about the protection of your data. Read our
-                <a href="#" class="font-medium text-gray-900 underline">Privacy Policy</a>.
+                <a href="https://www.nsd.org/our-district/leadership/policies-procedures" class="font-medium text-gray-900 underline">School Policy</a>.
               </p>
             </div>
           </div>
@@ -155,7 +148,7 @@
             </svg>
             <div class="relative mx-auto w-full rounded-lg shadow-lg lg:max-w-md">
               <button type="button" class="relative block w-full overflow-hidden rounded-lg bg-white focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">
-                <span class="sr-only">Watch our video to learn more</span>
+                <span class="sr-only">Watch our (nonexistant) video to learn more</span>
                 <img class="w-full" src="https://images.unsplash.com/photo-1556740758-90de374c12ad?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="">
                 <span class="absolute inset-0 flex h-full w-full items-center justify-center" aria-hidden="true">
                   <svg class="h-20 w-20 text-indigo-500" fill="currentColor" viewBox="0 0 84 84">
@@ -180,71 +173,7 @@
         </defs>
         <rect width="404" height="784" fill="url(#b1e6e422-73f8-40a6-b5d9-c8586e37e0e7)" />
       </svg>
-  
-      <div class="relative">
-        <h2 class="text-center text-3xl font-bold leading-8 tracking-tight text-gray-900 sm:text-4xl">A better way to send money</h2>
-        <p class="mx-auto mt-4 max-w-3xl text-center text-xl text-gray-500">Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus magnam voluptatum cupiditate veritatis in, accusamus quisquam.</p>
-      </div>
-  
-      <div class="relative mt-12 lg:mt-24 lg:grid lg:grid-cols-2 lg:items-center lg:gap-8">
-        <div class="relative">
-          <h3 class="text-2xl font-bold tracking-tight text-gray-900 sm:text-3xl">Transfer funds world-wide</h3>
-          <p class="mt-3 text-lg text-gray-500">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur minima sequi recusandae, porro maiores officia assumenda aliquam laborum ab aliquid veritatis impedit odit adipisci optio iste blanditiis facere. Totam, velit.</p>
-  
-          <dl class="mt-10 space-y-10">
-            <div class="relative">
-              <dt>
-                <div class="absolute flex h-12 w-12 items-center justify-center rounded-xl bg-indigo-500 text-white">
-                  <!-- Heroicon name: outline/globe-alt -->
-                  <svg class="h-8 w-8" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
-                    <path stroke-linecap="round" stroke-linejoin="round" d="M12 21a9.004 9.004 0 008.716-6.747M12 21a9.004 9.004 0 01-8.716-6.747M12 21c2.485 0 4.5-4.03 4.5-9S14.485 3 12 3m0 18c-2.485 0-4.5-4.03-4.5-9S9.515 3 12 3m0 0a8.997 8.997 0 017.843 4.582M12 3a8.997 8.997 0 00-7.843 4.582m15.686 0A11.953 11.953 0 0112 10.5c-2.998 0-5.74-1.1-7.843-2.918m15.686 0A8.959 8.959 0 0121 12c0 .778-.099 1.533-.284 2.253m0 0A17.919 17.919 0 0112 16.5c-3.162 0-6.133-.815-8.716-2.247m0 0A9.015 9.015 0 013 12c0-1.605.42-3.113 1.157-4.418" />
-                  </svg>
-                </div>
-                <p class="ml-16 text-lg font-medium leading-6 text-gray-900">Competitive exchange rates</p>
-              </dt>
-              <dd class="mt-2 ml-16 text-base text-gray-500">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores impedit perferendis suscipit eaque, iste dolor cupiditate blanditiis ratione.</dd>
-            </div>
-  
-            <div class="relative">
-              <dt>
-                <div class="absolute flex h-12 w-12 items-center justify-center rounded-xl bg-indigo-500 text-white">
-                  <!-- Heroicon name: outline/scale -->
-                  <svg class="h-8 w-8" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
-                    <path stroke-linecap="round" stroke-linejoin="round" d="M12 3v17.25m0 0c-1.472 0-2.882.265-4.185.75M12 20.25c1.472 0 2.882.265 4.185.75M18.75 4.97A48.416 48.416 0 0012 4.5c-2.291 0-4.545.16-6.75.47m13.5 0c1.01.143 2.01.317 3 .52m-3-.52l2.62 10.726c.122.499-.106 1.028-.589 1.202a5.988 5.988 0 01-2.031.352 5.988 5.988 0 01-2.031-.352c-.483-.174-.711-.703-.59-1.202L18.75 4.971zm-16.5.52c.99-.203 1.99-.377 3-.52m0 0l2.62 10.726c.122.499-.106 1.028-.589 1.202a5.989 5.989 0 01-2.031.352 5.989 5.989 0 01-2.031-.352c-.483-.174-.711-.703-.59-1.202L5.25 4.971z" />
-                  </svg>
-                </div>
-                <p class="ml-16 text-lg font-medium leading-6 text-gray-900">No hidden fees</p>
-              </dt>
-              <dd class="mt-2 ml-16 text-base text-gray-500">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores impedit perferendis suscipit eaque, iste dolor cupiditate blanditiis ratione.</dd>
-            </div>
-  
-            <div class="relative">
-              <dt>
-                <div class="absolute flex h-12 w-12 items-center justify-center rounded-xl bg-indigo-500 text-white">
-                  <!-- Heroicon name: outline/bolt -->
-                  <svg class="h-8 w-8" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
-                    <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 13.5l10.5-11.25L12 10.5h8.25L9.75 21.75 12 13.5H3.75z" />
-                  </svg>
-                </div>
-                <p class="ml-16 text-lg font-medium leading-6 text-gray-900">Transfers are instant</p>
-              </dt>
-              <dd class="mt-2 ml-16 text-base text-gray-500">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores impedit perferendis suscipit eaque, iste dolor cupiditate blanditiis ratione.</dd>
-            </div>
-          </dl>
-        </div>
-  
-        <div class="relative -mx-4 mt-10 lg:mt-0" aria-hidden="true">
-          <svg class="absolute left-1/2 -translate-x-1/2 translate-y-16 transform lg:hidden" width="784" height="404" fill="none" viewBox="0 0 784 404">
-            <defs>
-              <pattern id="ca9667ae-9f92-4be7-abcb-9e3d727f2941" x="0" y="0" width="20" height="20" patternUnits="userSpaceOnUse">
-                <rect x="0" y="0" width="4" height="4" class="text-gray-200" fill="currentColor" />
-              </pattern>
-            </defs>
-            <rect width="784" height="404" fill="url(#ca9667ae-9f92-4be7-abcb-9e3d727f2941)" />
-          </svg>
-          <img class="relative mx-auto" width="490" src="https://tailwindui.com/img/features/feature-example-1.png" alt="">
-        </div>
-      </div>
+
   
       <div class="bg-white py-20 sm:py-24 lg:py-32">
         <div class="mx-auto max-w-xl px-6 lg:max-w-7xl lg:px-8">
@@ -258,9 +187,9 @@
                     <path stroke-linecap="round" stroke-linejoin="round" d="M12 21a9.004 9.004 0 008.716-6.747M12 21a9.004 9.004 0 01-8.716-6.747M12 21c2.485 0 4.5-4.03 4.5-9S14.485 3 12 3m0 18c-2.485 0-4.5-4.03-4.5-9S9.515 3 12 3m0 0a8.997 8.997 0 017.843 4.582M12 3a8.997 8.997 0 00-7.843 4.582m15.686 0A11.953 11.953 0 0112 10.5c-2.998 0-5.74-1.1-7.843-2.918m15.686 0A8.959 8.959 0 0121 12c0 .778-.099 1.533-.284 2.253m0 0A17.919 17.919 0 0112 16.5c-3.162 0-6.133-.815-8.716-2.247m0 0A9.015 9.015 0 013 12c0-1.605.42-3.113 1.157-4.418" />
                   </svg>
                 </div>
-                <p class="mt-6 text-lg font-semibold leading-8 tracking-tight text-gray-900">Competitive exchange rates</p>
+                <p class="mt-6 text-lg font-semibold leading-8 tracking-tight text-gray-900">Competitive prices</p>
               </dt>
-              <dd class="mt-2 text-base leading-7 text-gray-600">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores impedit perferendis suscipit eaque, iste dolor cupiditate blanditiis ratione.</dd>
+              <dd class="mt-2 text-base leading-7 text-gray-600">We DONT have a team of reseachers finding the best price for you</dd>
             </div>
       
             <div>
@@ -273,7 +202,7 @@
                 </div>
                 <p class="mt-6 text-lg font-semibold leading-8 tracking-tight text-gray-900">No hidden fees</p>
               </dt>
-              <dd class="mt-2 text-base leading-7 text-gray-600">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores impedit perferendis suscipit eaque, iste dolor cupiditate blanditiis ratione.</dd>
+              <dd class="mt-2 text-base leading-7 text-gray-600">Once you open the bottle you are breaking the law in 51 of the 50 states in america. Thats how we can have no fees!</dd>
             </div>
       
             <div>
@@ -284,15 +213,15 @@
                     <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 13.5l10.5-11.25L12 10.5h8.25L9.75 21.75 12 13.5H3.75z" />
                   </svg>
                 </div>
-                <p class="mt-6 text-lg font-semibold leading-8 tracking-tight text-gray-900">Transfers are instant</p>
+                <p class="mt-6 text-lg font-semibold leading-8 tracking-tight text-gray-900">We dont even have shipping</p>
               </dt>
-              <dd class="mt-2 text-base leading-7 text-gray-600">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores impedit perferendis suscipit eaque, iste dolor cupiditate blanditiis ratione.</dd>
+              <dd class="mt-2 text-base leading-7 text-gray-600">Here at the purple water company we think shipping is useless.</dd>
             </div>
           </dl>
         </div>
       </div>
       <!-- This example requires Tailwind CSS v3.0+ -->
-<div class="bg-gray-900">
+<div class="bg-gray-900 re">
     <div class="relative overflow-hidden pt-32 pb-96 lg:pt-40">
       <div><img class="absolute bottom-0 left-1/2 w-[1440px] max-w-none -translate-x-1/2" src="https://tailwindui.com/img/component-images/grid-blur-purple-on-black.jpg" alt=""></div>
       <div class="relative mx-auto max-w-7xl px-6 text-center lg:px-8">
