--- a/404.html
+++ b/404.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html class="h-full">
     <head>
+        <title>???</title>
         <script src="https://cdn.tailwindcss.com"></script>
         <script>
           tailwind.config = {
