--- a/purple/index.html
+++ b/purple/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+      <title>Purpled Water Company</title>
         <script src="https://cdn.tailwindcss.com"></script>
         <script>
           tailwind.config = {
