--- a/JavaSMP/404.html
+++ b/JavaSMP/404.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html class="h-full">
     <head>
+        <title>???</title>
         <script src="https://cdn.tailwindcss.com"></script>
         <script>
           tailwind.config = {
@@ -13,9 +14,18 @@
             },
           };
         </script>
-            </head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    </head>
     <body class="h-full">
-<div class="min-h-full bg-white px-4 py-16 sm:px-6 sm:py-24 md:grid md:place-items-center lg:px-8">
+<!--
+  This example requires updating your template:
+
+  ```
+  <html class="h-full">
+  <body class="h-full">
+  ```
+-->
+<div class="min-h-full bg-white py-16 px-6 sm:py-24 md:grid md:place-items-center lg:px-8">
     <div class="mx-auto max-w-max">
       <main class="sm:flex">
         <p class="text-4xl font-bold tracking-tight text-indigo-600 sm:text-5xl">404</p>
@@ -25,12 +35,14 @@
             <p class="mt-1 text-base text-gray-500">Please check the URL in the address bar and try again.</p>
           </div>
           <div class="mt-10 flex space-x-3 sm:border-l sm:border-transparent sm:pl-6">
-            <a href="index.html" class="inline-flex items-center rounded-md border border-transparent bg-indigo-600 px-4 py-2 text-sm font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">Go back home</a>
-            <a href="https://discord.gg/sbz27nzMkp" class="inline-flex items-center rounded-md border border-transparent bg-indigo-100 px-4 py-2 text-sm font-medium text-indigo-700 hover:bg-indigo-200 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">Contact support</a>
+            <a href="./index.html" class="inline-flex items-center rounded-md border border-transparent bg-indigo-600 px-4 py-2 text-sm font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">Go back home</a>
+            <a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;%61%72%61%6D%73%68%69%76%61%40%69%63%6C%6F%75%64%2E%63%6F%6D" class="inline-flex items-center rounded-md border border-transparent bg-indigo-100 px-4 py-2 text-sm font-medium text-indigo-700 hover:bg-indigo-200 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">Contact me</a>
           </div>
         </div>
       </main>
     </div>
-  </div>
-  </body>
+         </div>
+    </body>
+  </html>
+  
   </html>
