--- a/JavaSMP/index.html
+++ b/JavaSMP/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Java SMP</title>
         <style>
             iframe {
                 width: 100%;
