--- a/recess/index.html
+++ b/recess/index.html
@@ -4,6 +4,6 @@
         
     </head>
     <body>
-        <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FPGVvpo62jKFlxzSKb31oux%2FRecess-Concepts%3Fnode-id%3D0%253A1%26t%3DgCnHlB0DJCwO0yAT-1" allowfullscreen></iframe>
+        <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="100%" height="100%" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FPGVvpo62jKFlxzSKb31oux%2FRecess-Concepts%3Fnode-id%3D0%253A1%26t%3DgCnHlB0DJCwO0yAT-1" allowfullscreen></iframe>
     </body>
 </html>
